force-app/main/default/objects/Opportunity_Historical_Data__c/Opportunity_Historical_Data__c.object-meta.xml
<CustomObject>
    <label>Opportunity History</label>
    <nameField>
        <displayFormat>OH-{0000}</displayFormat>
        <label>Opportunity Historical Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>