force-app/main/default/objects/Opportunity_Historical_Data__c/fields/Handover_At_Point_of_Close__c.field-meta.xml
<CustomField>
    <fullName>Handover_At_Point_of_Close__c</fullName>
    <label>Handover At Point of Close</label>
    <type>TextArea</type>
</CustomField>