force-app/main/default/objects/Opportunity_Historical_Data__c/fields/New_Handover_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Handover_ID__c</fullName>
    <formula>Opportunity__r.Handover_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Handover ID</label>
    <type>Text</type>
</CustomField>