force-app/main/default/objects/Opportunity_Historical_Data__c/fields/New_Profile__c.field-meta.xml
<CustomField>
    <fullName>New_Profile__c</fullName>
    <formula>Opportunity__r.Owner.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Profile</label>
    <type>Text</type>
</CustomField>