force-app/main/default/objects/Opportunity_Historical_Data__c/fields/New_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Record_Type__c</fullName>
    <formula>Opportunity__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Record Type</label>
    <type>Text</type>
</CustomField>