force-app/main/default/objects/Opportunity_Historical_Data__c/fields/New_Role__c.field-meta.xml
<CustomField>
    <fullName>New_Role__c</fullName>
    <formula>Opportunity__r.Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Role</label>
    <type>Text</type>
</CustomField>