force-app/main/default/objects/Opportunity_Historical_Data__c/fields/New_User_Division__c.field-meta.xml
<CustomField>
    <fullName>New_User_Division__c</fullName>
    <label>New User Division</label>
    <type>TextArea</type>
</CustomField>