force-app/main/default/objects/Opportunity_Historical_Data__c/fields/Opp_Product_Name_Test__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Name_Test__c</fullName>
    <label>Opp Product Name Test</label>
    <type>TextArea</type>
</CustomField>