force-app/main/default/objects/Opportunity_Historical_Data__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities History</relationshipLabel>
    <relationshipName>Opportunities_History</relationshipName>
    <type>Lookup</type>
</CustomField>