force-app/main/default/objects/Opportunity_Historical_Data__c/fields/Opportunity_History__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity History</label>
    <referenceTo>Opportunity_Historical_Data__c</referenceTo>
    <relationshipLabel>Opportunities History</relationshipLabel>
    <relationshipName>Opportunities_History</relationshipName>
    <type>Lookup</type>
</CustomField>