force-app/main/default/objects/Opportunity_Historical_Data__c/fields/Profile_At_Point_Of_Close__c.field-meta.xml
<CustomField>
    <fullName>Profile_At_Point_Of_Close__c</fullName>
    <label>Profile At Point Of Close</label>
    <type>TextArea</type>
</CustomField>