force-app/main/default/objects/Opportunity_Historical_Data__c/fields/Record_Type_At_Point_Of_Close__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_At_Point_Of_Close__c</fullName>
    <label>Record Type Prior To Close</label>
    <type>TextArea</type>
</CustomField>