force-app/main/default/objects/Opportunity_Historical_Data__c/fields/Role_At_Point_Of_Close__c.field-meta.xml
<CustomField>
    <fullName>Role_At_Point_Of_Close__c</fullName>
    <label>Role At Point Of Close</label>
    <type>TextArea</type>
</CustomField>