force-app/main/default/objects/Opportunity_Historical_Data__c/fields/Stage_Prior_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Stage_Prior_To_Close__c</fullName>
    <label>Stage Prior To Close</label>
    <type>TextArea</type>
</CustomField>