force-app/main/default/objects/Opportunity_Historical_Data__c/fields/User_Name_At_Point_Of_Close__c.field-meta.xml
<CustomField>
    <fullName>User_Name_At_Point_Of_Close__c</fullName>
    <label>User Name At Point Of Close</label>
    <type>TextArea</type>
</CustomField>