force-app/main/default/objects/Opportunity_Historical_Data__c/recordTypes/Opportunity_History.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_History</fullName>
    <active>true</active>
    <label>Opportunity History</label>
</RecordType>